# http-server-cpp

./: .gitignore  CMakeLists.txt  README.md  server
include/: requests_parser.h  response_gen.h
public/: about.html  form.html  image.html  index.html
src/: HTTP_server.cpp  requests_parser.cpp  response_gen.cpp
